# make-python-rpm

./: .gitignore  README.md  azure-pipelines.yml  setup.cfg  setup.py  snow.json  todo
etc/: make-python-rpm.spec.tmpl  my.spec.tmpl
etc/make-python-rpm/: my.spec.tmpl  spec.tmpl
etc/make-python-rpm/deb/: changelog.tmpl  control.tmpl  copyright.tmpl  postinst.tmpl  prerm.tmpl  rules.tmpl
