[metadata]
name = make-python-rpm
version = 1.0
author = Ton Hospel
author_email = make-python-rpm@ton.iguana.be
description = Convert a python project with all its dependencies into an rpm file
long_description = file: README.md
long_description_content_type = text/markdown
url = https://sede-it-itso.visualstudio.com/ITSO-SOM-ET-CON-Traffic-Engineering/_git/make-python-rpm
classifiers =
    Topic :: System :: Software Distribution   
    Intended Audience :: System Administrators   
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)   
    Programming Language :: Python :: 3
    Operating System :: POSIX
[options]
packages = find:
python_requires = >=3.8
scripts =
    bin/make-python-rpm
install_requires =
    setuptools
    types-setuptools

[options.packages.find]
exclude =
    debian

[options.data_files]
etc/make-python-rpm=
    etc/make-python-rpm/spec.tmpl
etc/make-python-rpm/deb=
    etc/make-python-rpm/deb/rules.tmpl
    etc/make-python-rpm/deb/copyright.tmpl
    etc/make-python-rpm/deb/control.tmpl
    etc/make-python-rpm/deb/prerm.tmpl
    etc/make-python-rpm/deb/changelog.tmpl
    etc/make-python-rpm/deb/postinst.tmpl

[options.extras_require]
dev=
    sphinx
    mypy
    autoflake
    safety
    # jupyter
    # ipython

[mypy]
show_error_codes = True
warn_redundant_casts = True
warn_unused_ignores  = True
# disallow_any_unimported = True
# disallow_any_expr = True
disallow_any_decorated = True
# disallow_any_explicit = True
# disallow_any_generics = True
disallow_subclassing_any = True
# disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = True
warn_return_any = True
warn_unreachable = True
local_partial_types = True
no_implicit_reexport = True
strict_equality = True
no_implicit_optional=True
# strict = True

[make_python_rpm]
target = /usr/local
vendor = Ton Hospel <make-python-rpm@ton.iguana.be>
git = main
template = etc/make-python-rpm/my.spec.tmpl
executable = /usr/bin/env python3
build_requires_deb =
    devscripts
    python3-venv
requires_deb =
    devscripts
    python3-venv
